# pokemon-save-web

./: .actrc  .env.example  .env.secrets.example  .eslintignore  .eslintrc  .gitignore  .oxlintrc.json  BEHAVIORAL_PATTERNS.md  BEHAVIORAL_SUCCESS.md  BYTE_PATTERNS.md  CONTAINER_REGISTRY.md  ENHANCEMENT_REPORT.md  GO_WASM_IMPLEMENTATION.md  IMPLEMENTATION_EXAMPLE.md  MEMORY_ANALYSIS_RESULTS.md  MOBILE_NAVIGATION_FULL_INVESTIGATION.md  MOBILE_NAVIGATION_INVESTIGATION.md  MOONBIT_INTEGRATION.md  PROPER_UNIVERSAL_PATTERNS.md  PWA_IMPLEMENTATION.md  README.md  UNIVERSAL_PATTERNS.md  ZUSTAND_MIGRATION.md  base-address-finder.ts  biome.json  clean-universal-test.ts  debug-connection.ts  debug-mgba.ts  debug-pattern-search.ts  debug-rom-content.ts  demo-stab.tsx  deno.json  direct-websocket-test.ts  docker-compose.yml  efficient-pattern-finder.ts  final-universal-pattern.ts  final-universal-patterns.ts  go.mod  index.html  lighthouse-after.json  (+26 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
__MACOSX/: ._player1.sav  ._player2.sa2
benchmark/: memory-performance.ts
docker/: BUILD_MGBA.md  Dockerfile  Dockerfile.auto  Dockerfile.broken  Dockerfile.complex  Dockerfile.prebuilt  HOSTING_SETUP.md  PREBUILT_SETUP.md  README.md  docker-compose.yml  docker-mgba.js  entrypoint.sh  mgba-docker-environment.test.ts  mgba-docker.ts
docs/: GameConfig.md  TESTING_WITH_ACT.md  docker-mgba.md  mgba-native-environment.md  (+6 more)
src/lib/parser/core-wasm/: Cargo.toml
src/lib/parser/core-wasm/src/: lib.rs  pokemon.rs  save_parser.rs  types.rs  utils.rs
(+517 files in other folders)
